--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section id="container">
+        
+    </section>
+    <footer>
+        <p>Desenvolvido por: Davi Fialho, Guilherme Soares e Mahara Machado</p>
+    </footer>
     <script src="perguntas.js"></script>
 </body>
 </html>
