--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
     </section>
     <footer>
-        <p>Desenvolvido por: Davi Fialho, Guilherme Soares e Mahara Machado</p>
+        <p>Desenvolvido por: Davi Fialho, Guilherme Cordeiro e Mahara Machado</p>
     </footer>
     <script src="perguntas.js"></script>
 </body>
