--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <p>Desenvolvido por: Davi Fialho, Guilherme Cordeiro e Mahara Machado</p>
     </footer>
     <script src="perguntas.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
